[package]
name = "hello-world"
version = "0.1.0"
authors = ["Aakash Hemadri <aakashhemadri123@gmail.com>"]
description = "A simple hello-world project built with wasm-pack"
license = "MIT"
repository = "https://github.com/aakashhemadri/wasm-tutorials/tree/master/hello-world"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
